--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-Template code for this for this closed issue. Not reccomended for production.
+Template code for this for this closed issue. Not recommended for production.
 
 [FR] Software correction for laser SLA distortion #6001
 
